5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4124/executions/1724_2528.log
== TEST (2019-05-14 11:39:33) 
-- CODE:
soma = 0
d = 0
while(x > 0):
	x = int(input("Digite um numero positivo: "))
	d = d + 1
	soma = soma + x ** d
	if(soma == x):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while(x > 0):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:39:44) 
-- CODE:
soma = 0
d = 0
x = 1
while(x > 0):
	x = int(input("Digite um numero positivo: "))
	d = d + 1
	soma = soma + x ** d
	if(soma == x):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
	
	
-- OUTPUT:
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:39:56) 
-- CODE:
soma = 0
d = 0
x = 1
while(x > 0):
	x = int(input("Digite um numero positivo: "))
	d = d + 1
	soma = soma + x ** d
	if(soma == x):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
	
	
-- OUTPUT:
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:40:01) 
-- CODE:
soma = 0
d = 0
x = 1
while(x > 0):
	x = int(input("Digite um numero positivo: "))
	d = d + 1
	soma = soma + x ** d
	if(soma == x):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
	
	
-- OUTPUT:
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
